# oscilloscope-vocabulary

./: .gitignore  README.md  create_structure.sh  pyproject.toml  verify_structure.sh
src/oscilloscope_vocabulary/: __init__.py  __main__.py  layers.py  server.py
src/oscilloscope_vocabulary/ologs/: README.md
tests/: run_tests.sh  test_layers.py  test_server.py
